# project-overseer

./: .env.example  .gitignore  .windsurfrules  README.md  pyproject.toml  setup.py
.github/workflows/: web-ci.yml
docs/: ADAPTIVE_LEARNING_SYSTEM.md  AGENT_MOTIVATION_FRAMEWORK.md  AGENT_WORKFLOW_ETHICAL_INTEGRATION.md  ALS_PROJECT_PLAN.md  ALS_WHITEPAPER.md  ARCHITECTURE.md  AUTONOMOUS_DEVELOPMENT_SYSTEM_ARCHITECTURE.md  ETHICAL_AI_INTEGRATION_STRATEGY.md  ETHICAL_MODULES_EXPLORATION.md  ETHICAL_REASONING_MANIFESTO.md  ETHICAL_REASONING_TECHNICAL_DEPTH.md  ETHICAL_REASONING_VISUALIZATION.py  ETHICAL_WORKFLOW_VISUALIZATION.py  MDIA_WHITEPAPER.md  ML_RESEARCH_PROPOSAL.md  MULTI_DIMENSIONAL_INTENT_ANALYSIS.md  ROADMAP.md
services/github-pr-monitor/: requirements.txt
services/github-pr-monitor/github_pr_monitor/: __init__.py
src/: __init__.py
src/agents/: __init__.py  integration_tools.py  scribe.py
src/tools/: __init__.py  docker_tool.py  github_tool.py  terraform_tool.py
tests/: ethical_agent_behavior_test_suite.py  test_adaptive_learning_system.py
web/project-overseer-web/: jest.config.js  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.jest.json  tsconfig.json
web/project-overseer-web/src/app/chat/: page.tsx
web/project-overseer-web/src/app/chat/__tests__/: page.test.tsx
web/project-overseer-web/src/lib/: anthropic.ts  utils.ts
web/project-overseer-web/src/lib/__tests__/: anthropic.test.ts
web/project-overseer-web/src/types/: agent.ts
(+2 files in other folders)
